[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Entities/Entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Entities/Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Entities/Player.png" type="Texture" id=3]
[ext_resource path="res://Audio/laser.wav" type="AudioStream" id=4]
[ext_resource path="res://Particles/Player_Normal.tres" type="Material" id=5]
[ext_resource path="res://Sprites/Entities/Particle_Player_Jet.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="Animation" id=2]
resource_name = "Jump"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 0 ]
}

[node name="Player" groups=[
"Player",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )
HP = 10.0
immortal = true

[node name="sprite" parent="." index="0"]
position = Vector2( 8, 4 )
texture = ExtResource( 3 )
hframes = 4

[node name="collision" parent="." index="1"]
shape = SubResource( 1 )

[node name="Gun" type="Position2D" parent="." index="2"]
position = Vector2( 28, 12 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Gun" index="0"]
stream = ExtResource( 4 )
volume_db = -20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
anims/Jump = SubResource( 2 )

[node name="Particles_Normal" type="Particles2D" parent="." index="4"]
position = Vector2( -12, 24 )
z_index = -1
amount = 256
lifetime = 2.0
local_coords = false
process_material = ExtResource( 5 )
texture = ExtResource( 6 )

[node name="Death_Timer" type="Timer" parent="." index="5"]
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="Death_Timer" to="." method="_on_Death_Timer_timeout"]
